# esp-idf

./: .gitmodules
components/freertos/: tasks.c
components/freertos/include/freertos/: FreeRTOS.h
examples/get-started/hello_world/: CMakeLists.txt
examples/get-started/hello_world/components/freertos_posix/: CMakeLists.txt
examples/get-started/hello_world/main/: CMakeLists.txt  hello_world_main.c
